#2484 Refactor union entity instrumentation into a shared utility.
Consolidate duplicated 'instrument()' methods from multiple classes into a single utility in EntityUtils.
  The method handles instrumentation of uninstrumented union entity values for validation purposes.
  Also enhance copy() methods to return the target entity for better method chaining.

  This change reduces code duplication across DeleteOperations, PersistentEntitySaver,
  ActivePropertyValidator, and EntityExistsValidator classes.